<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addNewToilet"
        android:layout_alignParentTop="true"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/addToilet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/location"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:textSize="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationHolder"
        android:text=""
        android:layout_above="@+id/rating"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/location" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:id="@+id/rating"
        android:textSize="16dp"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/location"
        android:layout_alignLeft="@+id/location"
        android:layout_alignStart="@+id/location" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:numStars="5"
        android:stepSize="1"
        android:rating="0"
        android:layout_alignBottom="@+id/rating"
        android:layout_toRightOf="@+id/location"
        android:layout_marginBottom="-15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:id="@+id/comment"
        android:textSize="16dp"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignLeft="@+id/rating"
        android:layout_alignStart="@+id/rating" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_above="@+id/submit"
        android:layout_alignRight="@+id/ratingBar"
        android:layout_alignEnd="@+id/ratingBar"
        android:layout_marginBottom="34dp" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rating"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/comment">



        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:layout_gravity="center_horizontal">
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hoursCheck"
                android:id="@+id/checkBox"
                android:layout_marginRight="10dp" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moneyCheck"
                android:id="@+id/checkBox2" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:layout_gravity="center_horizontal">
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invalidCheck"
                android:id="@+id/checkBox3"
                android:layout_marginRight="10dp" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/babyCheck"
                android:id="@+id/checkBox4"
                android:textSize="16dp" />

        </TableRow>

    </TableLayout>
</RelativeLayout>